# pawrrtal-ai

./: .docignore  .gitignore  .gitleaksignore  .gitmodules  .mcp.json  .pre-commit-config.yaml  .sweep-lessons.json  AGENTS.md  CHANGELOG.md  CONTEXT.md  DESIGN.md  GLOSSARY.md  HEARTBEAT.md  README.md  biome.json  ci-diagnostics.md  dev.ts  docker-compose.demo.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  doctor.config.json  justfile  nexus.db  package.json  pnpm-workspace.yaml  portless.json  repomix.config.json  serve.ts  skills-lock.json  tsconfig.json
backend/: .env.docker.example  .env.example  .importlinter  Dockerfile  main.py  pyproject.toml  railway.toml
backend/alembic/: env.py
backend/alembic/versions/: 000_initial_schema.py  001_add_conversation_metadata_fields.py  005_add_projects_and_conversation_project_fk.py  007_add_channel_bindings_and_link_codes.py  008_add_workspaces.py  012_canonicalise_conversation_model_ids.py  013_notion_operation_logs.py  016_add_lcm_embeddings.py  016_add_subagents_table.py  016_merge_notion_into_lcm_lineage.py  017_add_mcp_servers.py  017_scheduled_jobs_target_conversation_id.py  018_add_lcm_embeddings.py  018_scheduled_jobs_target_conversation_id.py  019_add_lcm_embeddings.py  020_add_conversation_reasoning_effort.py  021_add_memories_table.py  021_add_reasoning_effort_check_constraint.py  021_add_user_preferences_default_model_id.py  021_conversation_reasoning_effort_check.py  022_add_dreaming_jobs_table.py  022_add_user_preferences_default_model_id.py  022_user_preferences_font_size_nullable.py  023_user_preferences_font_size_nullable.py  024_add_memories_table.py  025_add_dreaming_jobs_table.py  026_add_fire_at_to_scheduled_jobs.py  027_add_codex_thread_id_to_conversations.py  028_add_codex_thread_prompt_hash.py  029_add_agy_conversation_id.py  030_drop_user_preferences_default_model_id.py  031_add_conversation_channel_thread_key.py  032_generic_provider_sessions.py
backend/app/: db.py  exceptions.py  governance_models.py  governance_schemas.py  lcm_models.py  logger_setup.py  mcp_models.py  models.py  provider_sessions.py  schema_model_id.py  schemas.py  subagent_models.py  users.py
backend/app/agents/: README.md  __init__.py  display.py  hooks.py  loop.py  permissions.py  refactorer.md  researcher.md  reviewer.md  runtime_context.py  safety_factory.py  tool_surface.py  tools.py  types.py
backend/app/api/: _chat_events.py  _chat_external_mcp.py  _chat_permissions.py  auth.py  channels.py  chat.py  completions.py  conversations.py  cost.py  exports.py  heartbeat.py  lcm.py  mcp_servers.py  models.py  oauth.py  personalization.py  scheduled_jobs.py  stt.py  workspace.py  workspace_env.py
backend/app/channels/: __init__.py  _telegram_dispatch.py  _telegram_draft.py  _telegram_finalize.py  _turn_cost.py  _turn_dreaming.py  _turn_runtime_context.py  _turn_workspace.py  base.py  crud.py  plugin_adapters.py  registry.py  router.py  sse.py  telegram.py  telegram_delivery.py  telegram_errors.py  telegram_html.py  telegram_progress.py  turn_runner.py
backend/app/chat/: __init__.py  aggregator.py  cost_budget.py  events.py  external_mcp.py  permissions.py  router.py
backend/app/cli/: admin_seed.py  commit.py  migrate_workspace_env.py
backend/app/conversations/: __init__.py  crud.py  exceptions.py  gemini_utils.py  messages_crud.py  router.py  settings.py  title.py
backend/app/core/: agent_hooks.py  agent_system_prompt.py  agent_tools.py  chat_aggregator.py  config.py  gemini_utils.py  heartbeat.py  keys.py  middleware.py  persona_bootstrap.py  runtime_context.py  telemetry.py  workspace.py
backend/app/crud/: channel.py  conversation.py  heartbeat.py  mcp_servers.py  memory.py  subagent.py  user_preferences.py  workspace.py
backend/app/governance/: __init__.py  bash_boundary.py  cost_tracker.py  middleware.py  permissions.py  secret_redaction.py  workspace_context.py
backend/app/infrastructure/: app_factory.py  branding.py  config.py  config_behavior.py  config_urls.py  exceptions.py  fs.py  keys.py  lifecycle.py  router_registry.py
backend/app/integrations/: __init__.py  event_bus_deps.py
backend/app/lcm/: __init__.py  background.py  condense.py  embeddings.py  evals.py  memory_crud.py  observe.py  pack.py  planner.py  summarization.py
backend/app/plugins/: README.md  __init__.py  capability_catalog.py  cli_runner.py  contributions.py  discovery.py  entrypoints.py  env.py  errors.py  fingerprints.py  host.py  manifest.py  registry.py  state.py  tool_context.py
backend/app/projects/: crud.py  router.py
backend/app/providers/: README.md  __init__.py  _stream_logging.py  base.py  events.py  factory.py  labels.py  litellm_helpers.py  litellm_provider.py  model_id.py  plugin_provider.py  reasoning.py  selection.py  session_preparer.py
backend/app/tools/: __init__.py  agents_md.py  artifact_agent.py  cron_tools.py  display.py  errors.py  exa_search.py  exa_search_agent.py  external_mcp.py  (+23 more)
backend/plugins/: README.md
backend/scripts/: _phase4_imports.py
backend/tests/: agent_harness.py  agent_loop_harness.py  conftest.py  lcm_helpers.py  test_active_recall_security.py  test_agent_loop.py  test_agent_loop_safety.py  test_agent_loop_scenarios.py  test_agent_system_prompt.py  test_agent_tools.py  test_agent_trace_tracer_injection.py  test_agents_md.py  test_agy_api_auth.py  test_agy_api_provider.py  test_agy_cli_provider.py  test_alembic_postgres_upgrade.py  test_allowed_user.py  test_appearance_crud.py  test_artifact_tool.py  test_auth_routes.py  test_beans_tasks_tool.py  test_catalog.py  test_channel_plugins.py  test_channels.py  test_channels_api.py  test_chat_aggregator.py  test_chat_api.py  test_chat_message_crud.py  test_chat_request_images.py  test_chat_sqlite_session_lifecycle.py  test_claude_provider.py  test_claude_provider_history_prefix.py  test_claude_provider_pr05.py  test_claude_tool_bridge.py  test_codex_persist_shutdown_drain.py  test_completions_api.py  test_config_sqlite_filename.py  test_conversation_api.py  test_conversation_crud.py  test_conversation_helpers.py  (+149 more)
(+1973 files in other folders)
